--- a/sponsor.html
+++ b/sponsor.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Alalia free bootstrap theme by themes for app.</title>
+    <title>Misfits Basketball</title>
     <meta name="description" content="Alalia free bootstrap template is a chrome add-on or extention app theme for startups. Made by Themes for app">
     <meta name="keywords" content="chrome extention theme, chrome theme, chrome add-on theme, free bootstrap theme">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
