--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                                 id="main-menu">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item ml-lg-3">
-                                        <a href="../sponsor.html" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="sponsor.html" class="nav-link text-secondary font-weight__400 ips">
                                             Sponsorship
                                         </a>
                                     </li>
                                     <li class="nav-item ml-lg-3">
-                                        <a href="/policies.html" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="policies.html" class="nav-link text-secondary font-weight__400 ips">
                                             Policies
                                         </a>
                                     </li>
