--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         <!--/ End Empty Space -->
                                         <p class="base-plus-font-size">
                                             Looking to increase your community involvement and support youth sport and
-                                            development, look no further. Check out our <mark><a href="/sponsor.html"><b>Sponsorship</b></a></mark> page for more
+                                            development, look no further. Check out our <mark><a href="sponsor.html"><b>Sponsorship</b></a></mark> page for more
                                             information on how you can support youth basketball.
                                         </p>
                                         <div class="text-center text-lg-center">
