--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item ml-lg-3">
-                                        <a href="https://www.w3schools.com" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="https://www.w3schools.com" onclick="window.open('https://www.w3schools.com')" class="nav-link text-secondary font-weight__400 ips">
                                             Contact
                                         </a>
                                     </li>
