--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 id="main-menu">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item ml-lg-3">
-                                        <a href="https://www.w3schools.com" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="sponsor.html" class="nav-link text-secondary font-weight__400 ips">
                                             Sponsorship
                                         </a>
                                     </li>
@@ -92,7 +92,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item ml-lg-3">
-                                        <a href="https://www.w3schools.com" onclick="window.open('https://www.w3schools.com')" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="#footer" class="nav-link text-secondary font-weight__400 ips">
                                             Contact
                                         </a>
                                     </li>
