--- a/sponsor.html
+++ b/sponsor.html
@@ -68,19 +68,27 @@
                             <a class="navbar-brand logo md-font-size font-family-secondary text-dark-gray m-0" href="index.html">
                                 <img src="assets/images/Misfit M.jpg" class="logo-img" alt="logo">
                             </a>
-                            <button class="navbar-toggler base-plus-font-size" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="base-color fas fa-bars text-white xl-font-size"></span>
+                            <button class="navbar-toggler base-plus-font-size" type="button" data-toggle="collapse"
+                                data-target="#main-menu" aria-controls="main-menu" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="base-color fas fa-bars text-dark-gray xl-font-size"></span>
                             </button>
-                            <div class="collapse navbar-collapse mt-3 mt-lg-0 base-font-size align-items-center" id="main-menu">
+                            <div class="collapse navbar-collapse mt-3 mt-lg-0 base-font-size align-items-center"
+                                id="main-menu">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item ml-lg-3">
-                                        <a href="/sponsor.html" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="sponsor.html" class="nav-link text-secondary font-weight__400 ips">
                                             Sponsorship
                                         </a>
                                     </li>
                                     <li class="nav-item ml-lg-3">
-                                        <a href="/policies.html" class="nav-link text-secondary font-weight__400 ips">
+                                        <a href="policies.html" class="nav-link text-secondary font-weight__400 ips">
                                             Policies
+                                        </a>
+                                    </li>
+                                    <li class="nav-item ml-lg-3">
+                                        <a href="#footer" class="nav-link text-secondary font-weight__400 ips">
+                                            Contact
                                         </a>
                                     </li>
                                    
