--- a/index.html
+++ b/index.html
@@ -337,64 +337,62 @@
         <!--/ End Features -->
 
         <section class="parallax2"></section>
+
         <!-- Footer -->
         <a id="footer"></a>
         <!-- Empty Space -->
         <div class="sm-space"></div>
+        
         <!--/ End Empty Space -->
-        <footer class="footer py-5 bg-white">
-            <div class="container">
-                <div class="row no-gutters">
-                    <div class="col-12">
-                        <div class="border-top border-color-light-gray"></div>
-                        <div class="row align-items-center">
-                            <div class="col-12 col-lg-12 mx-lg-auto order-lg-2">
-                                
-                                <div class="row">
-                                    <div class="col-12 col-lg-8">
-                                        <div class="text-center text-lg-left" style="padding: 100px 0px 100px 0px;">
-                                            <h2 class="lg-font-size font-weight__400 text-black">
-                                                Contact Us
-                                            </h2>
-                                            <p class="base-plus-font-size text-justify">
-                                                Feel free to contact us with any questions
-                                            </p>
-                                            <div>
-                                                <p class="base-plus-font-size text-justify font-weight__500">
-                                                    Email: <b>misfits22<!-- Comj#dfkjgdfment -->@g<!-- Com -->ma<!--sdfdsf@## Comment -->il.com </b>
+            <footer class="footer py-5 bg-white">
+                <div class="container">
+                   <div class="row no-gutters">
+                        <div class="col-12">
+                            <div class="border-top border-color-light-gray"></div>
+                            <div class="row align-items-center">
+                                <div class="col-12 col-lg-12 mx-lg-auto order-lg-2">
+                                    <div class="row">
+                                        <div class="col-12 col-lg-8">
+                                            <div class="text-center text-lg-left" style="padding: 100px 0px 100px 0px;">
+                                                <h2 class="lg-font-size font-weight__400 text-black">
+                                                    Contact Us
+                                                </h2>
+                                                <p class="base-plus-font-size text-justify">
+                                                    Feel free to contact us with any questions
                                                 </p>
+                                                <div>
+                                                    <p class="base-plus-font-size text-justify font-weight__500">
+                                                            Email: <b>misfits22<!-- Comj#dfkjgdfment -->@g<!-- Com -->ma<!--sdfdsf@## Comment -->il.com </b>
+                                                    </p>
+                                                </div>
                                             </div>
-
-
-
+                                        </div>
+                                        <div class="col-12 mx-auto col-lg-4 d-flex align-items-center justify-content-end img-fluid">
+                                            <img src="assets/images/Misfits Dark.png" class="img-fluid"
+                                                display="inline-block" vertical-align="middle" alt="footer logo"
+                                                height="75%" width="50%" object-fit="contain">
                                         </div>
                                     </div>
-                                    <div class="col-12 mx-auto col-lg-4 d-flex align-items-center justify-content-end img-fluid">
-                                        <img src="assets/images/Misfits Dark.png" class="img-fluid"
-                                            display="inline-block" vertical-align="middle" alt="footer logo"
-                                            height="75%" width="50%" object-fit="contain">
-                                    </div>
-                                </div>
-
-                                <div class="border-top border-color-light-gray"></div>
-                                <!-- Empty Space -->
-                                <div class="sm-space"></div>
-                                <!--/ End Empty Space -->
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="xs-font-size text-center text-dark-gray">
+                                    <div class="border-top border-color-light-gray"></div>
+                                    <!-- Empty Space -->
+                                    <div class="sm-space"></div>
+                                    <!--/ End Empty Space -->
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="xs-font-size text-center text-dark-gray"></div>
                                         </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="copyright xs-font-size text-center text-dark-gray">
-                                            © 2023. All Rights Reserved.
+                                        <div class="col-12">
+                                            <div class="copyright xs-font-size text-center text-dark-gray">
+                                                © 2023. All Rights Reserved.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-        </footer>
+                    </div>    
+                </div>
+            </footer>
         <!--/ End Footer -->
 
 
