--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
 
-        </section>
+
         <!-- How It Works -->
         <section id="how-works" class="section how-works"
             style="background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('court-back.jpg'); background-size:cover;">
@@ -118,7 +118,6 @@
                 <h3 class="xxl-font-size font-weight__500 text-misfit-blue" text-align="center">BASKETBALL CLUB</h3>
                 <h3 class="base-font-size font-weight__500 text-misfit-blue" text-align="center" margin-bottom="0">
                     Regina, SK</h3>
-            </div>
         </section>
 
 
@@ -183,9 +182,7 @@
         </section>
         <!--/ End CTA -->
 
-        <section class="parallax2">
-
-        </section>
+        <section class="parallax2"></section>
 
         <!-- Features -->
         <section class="feature section bg-light"
@@ -265,6 +262,7 @@
             </div>
         </section>
         <!--/ End Features -->
+
         <!-- Features -->
         <section class="feature section bg-light">
             <div class="container">
@@ -306,6 +304,7 @@
             </div>
         </section>
         <!--/ End Features -->
+
         <!-- Features -->
         <section class="feature section bg-white">
             <div class="container">
@@ -344,11 +343,12 @@
         <section class="parallax2"></section>
 
         <!-- Footer -->
+
         <a id="footer"></a>
         <!-- Empty Space -->
         <div class="sm-space"></div>
-
         <!--/ End Empty Space -->
+
         <footer class="footer py-5 bg-white">
             <div class="container">
                 <div class="row no-gutters">
@@ -403,19 +403,19 @@
         </footer>
         <!--/ End Footer -->
     </div>
-    
 
-        <!-- jQuery Script -->
-        <script src="assets/js/jquery.min.js"></script>
 
-        <!-- Popper Script -->
-        <script src="assets/js/popper.min.js"></script>
+    <!-- jQuery Script -->
+    <script src="assets/js/jquery.min.js"></script>
 
-        <!-- Bootstrap Script -->
-        <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Popper Script -->
+    <script src="assets/js/popper.min.js"></script>
 
-        <!-- Main Script -->
-        <script src="assets/js/main.js"></script>
+    <!-- Bootstrap Script -->
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    <!-- Main Script -->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
