--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                                 <ul class="navbar-nav ml-auto flex-nowrap">
                                     <li class="nav-item">
-                                        <a href="sponsor.html" class="nav-link m-2 menu-item nav-active">Sponsorship</a>
+                                        <a href="https://carawaygrill.com/locations/regina-aurora/" class="nav-link m-2 menu-item nav-active">Sponsorship</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="policies.html" class="nav-link m-2 menu-item">Policies</a>
