--- a/sponsor.html
+++ b/sponsor.html
@@ -64,7 +64,7 @@
             <header class="header py-3">
                 <div class="header-inner">
                     <!-- Navbar6-->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
                         <div class="container">
                             <div class="d-flex flex-grow-1">
                                 <span
@@ -103,7 +103,7 @@
         </div>
 
 <!-- CTA -->
-<section class="CTA section bg-white section-bg">
+<section class="CTA section-no-pad bg-white section-bg">
     <div class="container">
         <div class="row no-gutters">
             <div class="col-12">
@@ -117,13 +117,13 @@
                                 <!-- Empty Space -->
                                 <div class="pt-1"></div>
                                 <!--/ End Empty Space -->
-                                <p class="base-plus-font-size text-justify">
+                                <p class="base-font-size text-justify">
                                     We need your help to support our young basketball players. The Misfits Basketball Club is a volunteer-run program that helps kids develop their skills and passion for the sport. But we can't do it alone. We rely on fees, fundraisers, and donations to cover our costs.
-                                <p class="base-plus-font-size text-justify">
+                                <p class="base-font-size text-justify">
                                     Your sponsorship will make a big difference for our players. It will help them afford equipment, uniforms, court rentals, insurance, travel, and tournament fees. These expenses add up to more than $500 per player per year, which is hard for many families to pay.
-                                <p class="base-plus-font-size text-justify">
+                                <p class="base-font-size text-justify">
                                     As a thank you for your generosity, we will give you a Team Sponsor Plaque with a team photo that you can display in your office. This will show your customers and community that you care about youth sports. You can also donate gift cards or other items for our raffle baskets.                                    
-                                <p class="base-plus-font-size text-justify">
+                                <p class="base-font-size text-justify">
                                     Please choose a sponsorship level that suits your budget and goals. We appreciate any amount you can give. Thank you for supporting the Misfits Basketball Club!
                                 </p>  
                             </div>
