--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <header class="header py-3">
                 <div class="header-inner">
                     <!-- Navbar6-->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
                         <div class="container">
                             <div class="d-flex flex-grow-1">
                                 <span
@@ -85,7 +85,7 @@
                             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                                 <ul class="navbar-nav ml-auto flex-nowrap">
                                     <li class="nav-item">
-                                        <a href="sponsorship.html" class="nav-link m-2 menu-item nav-active">Sponsorship</a>
+                                        <a href="sponsor.html" class="nav-link m-2 menu-item nav-active">Sponsorship</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="policies.html" class="nav-link m-2 menu-item">Policies</a>
