--- a/policies.html
+++ b/policies.html
@@ -64,7 +64,7 @@
             <header class="header py-3">
                 <div class="header-inner">
                     <!-- Navbar6-->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
                         <div class="container">
                             <div class="d-flex flex-grow-1">
                                 <span
