--- a/index-dark.html
+++ b/index-dark.html
@@ -63,18 +63,18 @@
 
 <body class="text-body base-font-size font-weight__300">
     <div class="wrapper mx-auto h-100">
-        <div class="cover bg-primary section-bg">
+        <div class="cover bg-dark-gray section-bg">
             <!-- Header -->
             <header class="header py-3">
                 <div class="header-inner">
                     <!-- Navbar6-->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
                         <div class="container">
                             <div class="d-flex flex-grow-1">
                                 <span
                                     class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
                                 <a class="navbar-brand logo" href="index.html">
-                                    <img src="assets/images/Misfit M.jpg" class="logo-img" alt="logo"></a>
+                                    <img src="assets/images/Misfit M-trans.png" class="logo-img" alt="logo"></a>
                                 <div class="w-100 text-right">
                                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                                         data-target="#myNavbar">
@@ -116,24 +116,26 @@
 
 
 
-        <section id="what we beleive" class="section bg-white">
+        <section id="what we beleive" class="section bg-dark-gray text-misfit-blue">
             <div class="row no-gutters">
                 <div class="col-12 mx-auto">
                     <div class="row">
                         <div class="col-10 mx-auto">
                             <div class="section-title text-center">
-                                <h2 class="h6 font-weight__500 text-black">
+                                <h2 class="h6 font-weight__500 text-misfit-blue">
                                     WHAT WE BELEIVE IN
                                 </h2>
                                 <!-- Empty Space -->
-                                <div class="sm-space"></div>
+                                <div class="sm-space "></div>
                                 <!--/ End Empty Space -->
-                                <p class="h4 font-weight__550">Work Hard</p>
-                                <p class="h4 font-weight__550">Have Fun</p>
-                                <p class="h4 font-weight__550">Support Each Other</p>
-                                <p class="h4 font-weight__550">Compete</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Work Hard</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Have Fun</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Support Each Other</p>
+                                <p class="h4 font-weight__550 text-misfit-pink">Compete</p>
                             </div>
                         </div>
+                       
+                       <!--
                         <div class="center container">
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="max-width:200px height=100%" >
                             <ol class="carousel-indicators">
@@ -161,7 +163,8 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        </div>
+                        </div> 
+                    -->
                     </div>
                 </div>
             </div>
@@ -171,25 +174,23 @@
 
 
         <!-- CTA -->
-        <section class="CTA section bg-white section-bg">
+        <section class="CTA section-no-pad bg-dark-gray section-bg">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
-                        <div class="box box-shadow border border-color-light-gray p-5">
+                        <div class="box box-shadow border border-color-pink p-5">
                             <div class="row align-items-center">
                                 <div class="col-12 col-lg-12 mr-lg-auto">
                                     <div class="text-center text-lg-left">
-                                        <h2 class="lg-font-size font-weight__700 text-black">
+                                        <h2 class="lg-font-size font-weight__700 text-facebook-dark1">
                                             Sponsor the Misfits
                                         </h2>
                                         <!-- Empty Space -->
                                         <div class="pt-1"></div>
                                         <!--/ End Empty Space -->
-                                        <p class="base-plus-font-size">
+                                        <p class="base-plus-font-size text-facebook-dark2">
                                             Looking to increase your community involvement and support youth sport and
-                                            development, look no further. Check out our <mark><a
-                                                    href="sponsor.html"><b>Sponsorship</b></a></mark> page for more
-                                            information on how you can support youth basketball.
+                                            development, look no further. Check out our Sponsorship page for more information on how you can support youth basketball.
                                         </p>
                                         <div class="text-center text-lg-center">
                                             <img src="assets/images/yourlogo.jpg"
@@ -210,22 +211,22 @@
 
 
         <!-- Features -->
-        <section class="feature section bg-light"
+        <section class="feature section-no-pad bg-black"
             style="background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('court-back.jpg'); background-size:cover;">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
                         <div class="row align-items-left">
                             <div class="col-12 col-lg-9 mx-lg-auto">
-                                <div class="p-lg-3 text-left text-lg-left">
+                                <div class="p-lg-3 text-left text-lg-left text-facebook-dark1">
                                     <h3 class="text-primary base-font-size"></h3>
-                                    <h2 class="xxl-font-size font-weight__400 text-white">
+                                    <h2 class="xxl-font-size font-weight__400">
                                         About
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-plus-font-size text-justify text-white">
+                                    <p class="base-plus-font-size text-justify">
                                         In 2019, the Regina Misfits youth basketball club was started by local
                                         basketball superstars and former University of Regina Women Cougar’s Bree
                                         Burgess and Leah Levy, as well as local teacher and Basketball Saskatchewan Inc.
@@ -233,7 +234,7 @@
                                         of knowledge and skills to the Misfits organization. Today, we are the largest
                                         female youth basketball club in Saskatchewan!
                                     </p>
-                                    <p class="base-plus-font-size text-justify text-white">
+                                    <p class="base-plus-font-size text-justify">
                                         Our Misfits basketball club currently supports player development between grades
                                         four to nine. Our goal is to empower and support female youths as they grow and
                                         develop their skills.
@@ -251,21 +252,21 @@
         <section class="parallax2"></section>
 
         <!-- Features -->
-        <section class="feature section bg-white">
+        <section class="feature section bg-dark-gray">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-8 mx-lg-auto order-lg-2">
-                                <div class="p-lg-12 text-center text-lg-left">
+                                <div class="p-lg-12 text-center text-lg-left text-misfit-blue">
                                     <h3 class="text-primary base-font-size"></h3>
-                                    <h2 class="xl-font-size font-weight__400 text-black">
+                                    <h2 class="xl-font-size font-weight__400 ">
                                         Abuse-Free Sport
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify">
+                                    <p class="base-font-size text-justify text-misfit-pink">
                                         Misfits are committed to ensuring sport is fun and safe and promote the
                                         Abuse-Free Sport Helpline. The Helpline is a listening and referral service that
                                         aims to encourage people to speak openly and to validate their concerns
@@ -289,7 +290,7 @@
         <!--/ End Features -->
 
         <!-- Features -->
-        <section class="feature section bg-light">
+        <section class="feature section bg-card-dark">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
@@ -297,20 +298,20 @@
                             <div class="col-12 col-lg-9 mx-lg-auto">
                                 <div class="p-lg-10 text-center text-lg-left">
                                     <h3 class="text-primary base-font-size"></h3>
-                                    <h2 class="xl-font-size font-weight__400 text-black">
+                                    <h2 class="xl-font-size font-weight__400 text-facebook-dark1">
                                         Responsible Coaching Movement
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify">
+                                    <p class="base-font-size text-justify text-facebook-dark2">
                                         Established by the Coaching Association of Canada and the Canadian Centre for
                                         Ethics in Sport, the Misfits coaches support the Responsible Coaching Movement
                                         which invites all coaches and sport organizations to learn and apply consistent
                                         safety principles. It includes three distinct pillars, each serving to create a
                                         sport environment that is Safe, Smart, and Secure.
                                     </p>
-                                    <p class="base-font-size text-justify">
+                                    <p class="base-font-size text-justify text-facebook-dark2">
                                         All Misfits coaches have been screened, follow the rule of two, and have taken
                                         training so our coaches have the confidence and skills needed to effectively
                                         manage challenging situations.
@@ -331,7 +332,7 @@
         <!--/ End Features -->
 
         <!-- Features -->
-        <section class="feature section bg-white">
+        <section class="feature section bg-dark-gray">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
@@ -339,13 +340,13 @@
                             <div class="col-12 col-lg-8 mx-lg-auto order-lg-2">
                                 <div class="p-lg-12 text-center text-lg-left">
                                     <h3 class="text-primary base-font-size"></h3>
-                                    <h2 class="xl-font-size font-weight__400 text-black">
+                                    <h2 class="xl-font-size font-weight__400 text-misfit-blue">
                                         Funding
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="sm-space"></div>
                                     <!--/ End Empty Space -->
-                                    <p class="base-font-size text-justify">
+                                    <p class="base-font-size text-justify text-misfit-pink">
                                         Sometimes, families need financial assistance to get their kids into a sport or
                                         physical activity. We're committed to helping all families access sport through
                                         promoting the Jumpstart program.
@@ -370,11 +371,9 @@
         <!-- Footer -->
 
         <a id="footer"></a>
-        <!-- Empty Space -->
-        <div class="sm-space"></div>
-        <!--/ End Empty Space -->
+        
 
-        <footer class="footer py-5 bg-white">
+        <footer class="footer py-5 bg-black">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-12">
@@ -384,14 +383,14 @@
                                 <div class="row">
                                     <div class="col-12 col-lg-8">
                                         <div class="text-center text-lg-left" style="padding: 100px 0px 100px 0px;">
-                                            <h2 class="lg-font-size font-weight__400 text-black">
+                                            <h2 class="lg-font-size font-weight__400 text-misfit-blue">
                                                 Contact Us
                                             </h2>
-                                            <p class="base-plus-font-size text-justify">
+                                            <p class="base-plus-font-size text-justify text-misfit-pink">
                                                 Feel free to contact us with any questions
                                             </p>
                                             <div>
-                                                <p class="base-plus-font-size text-justify font-weight__500">
+                                                <p class="base-plus-font-size text-justify font-weight__500 text-misfit-pink">
                                                     Email:
                                                     <b>misfits22<!-- Comj#dfkjgdfment -->@g<!-- Com -->ma<!--sdfdsf@## Comment -->il.com
                                                     </b>
@@ -401,7 +400,7 @@
                                     </div>
                                     <div
                                         class="col-12 mx-auto col-lg-4 d-flex align-items-center justify-content-end img-fluid">
-                                        <img src="assets/images/Misfits Dark.png" class="img-fluid"
+                                        <img src="assets/images/Misfits Dark-trans.png" class="img-fluid"
                                             display="inline-block" vertical-align="middle" alt="footer logo"
                                             height="75%" width="50%" object-fit="contain">
                                     </div>
